--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~9.1.0",
+    "@angular/cdk": "^9.2.4",
     "@angular/common": "~9.1.0",
     "@angular/compiler": "~9.1.0",
     "@angular/core": "~9.1.0",
     "@angular/fire": "^5.4.2",
     "@angular/forms": "~9.1.0",
+    "@angular/material": "^9.2.4",
     "@angular/platform-browser": "~9.1.0",
     "@angular/platform-browser-dynamic": "~9.1.0",
     "@angular/router": "~9.1.0",
@@ -31,7 +33,7 @@
     "angular-google-charts": "^1.1.4",
     "angular-user-idle": "^2.2.2",
     "bn-ng-idle": "^1.0.1",
-    "firebase": "^7.6.0",
+    "firebase": "^7.24.0",
     "moment": "^2.29.1",
     "ngx-infinite-scroll": "^10.0.0",
     "npm": "^6.14.5",
@@ -51,6 +53,10 @@
     "@types/jasminewd2": "~2.0.3",
     "api-ai-javascript": "^2.0.0-beta.21",
     "codelyzer": "^5.1.2",
+    "firebase-tools": "^7.12.0",
+    "fuzzy": "^0.1.3",
+    "inquirer": "^6.2.2",
+    "inquirer-autocomplete-prompt": "^1.0.1",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.4.1",
