--- a/angular.json
+++ b/angular.json
@@ -26,6 +26,7 @@
               "src/manifest.json"
             ],
             "styles": [
+              "src/custom-theme.scss",
               "src/assets/css/app.min.css",
               "src/assets/bundles/izitoast/css/iziToast.min.css",
               "src/assets/css/style.css",
@@ -63,7 +64,6 @@
               "src/assets/custom/js/block-ui.js",
               "src/assets/custom/js/boatbox.js",
               "src/assets/custom/js/mconnect-webrtc.js",
-              
               "src/assets/js/gauge-loader.js",
               "src/assets/custom/js/dialpad.js",
               "src/assets/js/ckeditor-19.1.1.js",
@@ -72,11 +72,8 @@
               "src/assets/js/custom.js",
               "src/assets/custom/js/volume.js",
               "src/assets/spin.min.js",
-               "src/assets/bootbox.min.js",
-               "src/assets/toastr.min.js"
-
-
-              
+              "src/assets/bootbox.min.js",
+              "src/assets/toastr.min.js"
             ]
           },
           "configurations": {
@@ -115,7 +112,7 @@
           },
           "configurations": {
             "production": {
-            "host": "0.0.0.0",
+              "host": "0.0.0.0",
               "browserTarget": "omni-channel:build:production",
               "disableHostCheck": true
             }
