--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "private": true,
   "dependencies": {
+    "-": "0.0.1",
     "@angular/animations": "~9.1.0",
     "@angular/cdk": "^9.2.4",
     "@angular/common": "~9.1.0",
@@ -18,6 +19,7 @@
     "@angular/core": "~9.1.0",
     "@angular/fire": "^5.4.2",
     "@angular/forms": "~9.1.0",
+    "@angular/localize": "^13.1.1",
     "@angular/material": "^9.2.4",
     "@angular/platform-browser": "~9.1.0",
     "@angular/platform-browser-dynamic": "~9.1.0",
@@ -32,6 +34,7 @@
     "angular-gauge-chart": "^0.7.2",
     "angular-google-charts": "^1.1.4",
     "angular-user-idle": "^2.2.2",
+    "audio": "^1.2.0",
     "bn-ng-idle": "^1.0.1",
     "firebase": "^7.24.0",
     "moment": "^2.29.1",
@@ -40,6 +43,7 @@
     "rxjs": "~6.5.4",
     "socket.io-client": "^2.3.0",
     "sweetalert2": "^9.10.12",
+    "ts": "^0.2.2",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
   },
