--- a/angular.json
+++ b/angular.json
@@ -73,7 +73,8 @@
               "src/assets/custom/js/volume.js",
               "src/assets/spin.min.js",
               "src/assets/bootbox.min.js",
-              "src/assets/toastr.min.js"
+              "src/assets/toastr.min.js",
+              "src/assets/js/translate.js"
              
             ]
           },
